--- a/.github/workflows/deploy-auth.yaml
+++ b/.github/workflows/deploy-auth.yaml
@@ -15,8 +15,9 @@ jobs:
     steps:
       - uses: actions/checkout@v2
       - run: cd auth && docker build -t doomvell13/auth .
-      - run: echo $DOCKERHUB_PASSWORD | docker login -u $DOCKERHUB_USERNAME --password-stdin
+      - run: 
+          echo ${{ secrets.DOCKER_PASSWORD }} | docker login -u ${{ secrets.DOCKER_USERNAME }} --password-stdin
         env:
-          DOCKER_USERNAME: ${{ secrets.DOCKER_USERNAME }}
-          DOCKER_PASSWORD: ${{ secrets.DOCKER_PASSWORD }}
+          $DOCKER_USERNAME: ${{ secrets.DOCKER_USERNAME }}
+          $DOCKER_PASSWORD: ${{ secrets.DOCKER_PASSWORD }}
       - run: docker push doomvell13/auth
